# prompt-enhancer

./: .env.example  .gitignore  IDEA.md  README.md  pyproject.toml
app/: __init__.py  config.py  main.py
app/api/: deps.py
app/api/routes/: __init__.py  benchmark.py  enhance.py  knowledge.py
app/models/: __init__.py  schemas.py
app/services/: __init__.py  doubao_client.py  enhancer.py  ollama_client.py  rag_service.py
app/utils/: __init__.py  embeddings.py  file_parser.py
tests/: test_benchmark.py  test_enhance.py  test_rag.py
